/*
Copyright 2023 The Invisinets Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package controllerpb;

option go_package="github.com/NetSys/invisinets/pkg/invisinetspb/controllerpb";

service Controller {
    rpc FindUnusedAddressSpace(FindUnusedAddressSpaceRequest) returns (FindUnusedAddressSpaceResponse) {}
    rpc GetUsedAddressSpaces(GetUsedAddressSpacesRequest) returns (GetUsedAddressSpacesResponse) {}
    rpc ConnectClouds(ConnectCloudsRequest) returns (ConnectCloudsResponse) {}
}

message FindUnusedAddressSpaceRequest {
    string namespace = 1;
}

message FindUnusedAddressSpaceResponse {
    string address_space = 1;
}

message AddressSpaceMapping {
    repeated string address_spaces = 1;
    string cloud = 2;
    string namespace = 3;
}

message GetUsedAddressSpacesRequest {
    string namespace = 1;
}

message GetUsedAddressSpacesResponse {
    repeated AddressSpaceMapping address_space_mappings = 1;
}

message ConnectCloudsRequest {
    string cloudA = 1;
    string cloudB = 2;
    string cloudAAddressSpace = 3;
    string cloudBAddressSpace = 4;
    string cloudANamespace = 5;
    string cloudBNamespace = 6;
}

message ConnectCloudsResponse {
}
